// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identify-with-password Client-side field change validation tests fails client side validation with no inputs 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign In
                      </h1>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-21"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
                        data-shrink="false"
                        for="identifier"
                        id="identifier-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error Mui-focused MuiInputBase-formControl emotion-23"
                        required="true"
                      >
                        <input
                          aria-describedby="identifier-error"
                          aria-errormessage="identifier-error"
                          aria-invalid="true"
                          aria-labelledby="identifier-label"
                          autocomplete="username"
                          class="MuiInputBase-input emotion-24"
                          data-se="identifier"
                          id="identifier"
                          name="identifier"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium Mui-focused emotion-25"
                        id="identifier-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-21"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd emotion-31"
                        required="true"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-errormessage="credentials.passcode-error"
                          aria-invalid="true"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-24"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-33"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-34"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-25"
                        id="credentials.passcode-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-40"
                    >
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-41"
                      >
                        
                         
                        
                      </legend>
                      <div
                        aria-labelledby="rememberMe-label"
                        class="MuiFormGroup-root emotion-42"
                        id="rememberMe"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-43"
                          id="rememberMe-checkbox"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall emotion-44"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-45"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-46"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </div>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-50"
                      data-se="forgot-password"
                      role="link"
                      type="button"
                    >
                      Forgot password?
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-52"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Help
                      <span
                        class="Link-indicator"
                        role="presentation"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.293 14.293 18.586 4H10V2h10.223c.12 0 .262 0 .387.01.145.012.353.042.571.153a1.5 1.5 0 0 1 .655.656c.112.218.142.426.154.571.01.125.01.268.01.387V14h-2V5.414L9.707 15.707l-1.414-1.414Zm7.745 5.74v-7.847l2-2.042v11.89H2.024V5.966h11.828l-2.041 2H4.024v12.068h12.014Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-55"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-56"
                  >
                    <div
                      class="MuiBox-root emotion-57"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-46"
                          data-se="signup-info"
                          tabindex="-1"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-57"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-50"
                        data-se="enroll"
                        role="link"
                        type="button"
                      >
                        Sign up
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign In
                      </h1>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-21"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
                        data-shrink="false"
                        for="identifier"
                        id="identifier-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error Mui-focused MuiInputBase-formControl emotion-23"
                        required="true"
                      >
                        <input
                          aria-describedby="identifier-error"
                          aria-errormessage="identifier-error"
                          aria-invalid="true"
                          aria-labelledby="identifier-label"
                          autocomplete="username"
                          class="MuiInputBase-input emotion-24"
                          data-se="identifier"
                          id="identifier"
                          name="identifier"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium Mui-focused emotion-25"
                        id="identifier-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-21"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-22"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd emotion-31"
                        required="true"
                      >
                        <input
                          aria-describedby="credentials.passcode-error"
                          aria-errormessage="credentials.passcode-error"
                          aria-invalid="true"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-24"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-33"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-34"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-25"
                        id="credentials.passcode-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-40"
                    >
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-41"
                      >
                        
                         
                        
                      </legend>
                      <div
                        aria-labelledby="rememberMe-label"
                        class="MuiFormGroup-root emotion-42"
                        id="rememberMe"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-43"
                          id="rememberMe-checkbox"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall emotion-44"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-45"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-46"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </div>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-50"
                      data-se="forgot-password"
                      role="link"
                      type="button"
                    >
                      Forgot password?
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-52"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Help
                      <span
                        class="Link-indicator"
                        role="presentation"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.293 14.293 18.586 4H10V2h10.223c.12 0 .262 0 .387.01.145.012.353.042.571.153a1.5 1.5 0 0 1 .655.656c.112.218.142.426.154.571.01.125.01.268.01.387V14h-2V5.414L9.707 15.707l-1.414-1.414Zm7.745 5.74v-7.847l2-2.042v11.89H2.024V5.966h11.828l-2.041 2H4.024v12.068h12.014Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-55"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-56"
                  >
                    <div
                      class="MuiBox-root emotion-57"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-46"
                          data-se="signup-info"
                          tabindex="-1"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-57"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-50"
                        data-se="enroll"
                        role="link"
                        type="button"
                      >
                        Sign up
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password renders form with focus 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign In
                      </h1>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-14"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-15"
                        data-shrink="false"
                        for="identifier"
                        id="identifier-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-16"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="identifier-label"
                          autocomplete="username"
                          class="MuiInputBase-input emotion-17"
                          data-se="identifier"
                          id="identifier"
                          name="identifier"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-14"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-15"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd emotion-21"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-17"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-23"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-24"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-25"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-27"
                    >
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-28"
                      >
                        
                         
                        
                      </legend>
                      <div
                        aria-labelledby="rememberMe-label"
                        class="MuiFormGroup-root emotion-29"
                        id="rememberMe"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-30"
                          id="rememberMe-checkbox"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall emotion-31"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-32"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-33"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </div>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-35"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                      data-se="forgot-password"
                      role="link"
                      type="button"
                    >
                      Forgot password?
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-39"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Help
                      <span
                        class="Link-indicator"
                        role="presentation"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-25"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.293 14.293 18.586 4H10V2h10.223c.12 0 .262 0 .387.01.145.012.353.042.571.153a1.5 1.5 0 0 1 .655.656c.112.218.142.426.154.571.01.125.01.268.01.387V14h-2V5.414L9.707 15.707l-1.414-1.414Zm7.745 5.74v-7.847l2-2.042v11.89H2.024V5.966h11.828l-2.041 2H4.024v12.068h12.014Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-42"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-43"
                  >
                    <div
                      class="MuiBox-root emotion-44"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-33"
                          data-se="signup-info"
                          tabindex="-1"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-44"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                        data-se="enroll"
                        role="link"
                        type="button"
                      >
                        Sign up
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password renders form without focus 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h1
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign In
                      </h1>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-14"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-15"
                        data-shrink="false"
                        for="identifier"
                        id="identifier-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-16"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="identifier-label"
                          autocomplete="username"
                          class="MuiInputBase-input emotion-17"
                          data-se="identifier"
                          id="identifier"
                          name="identifier"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-14"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-15"
                        data-shrink="false"
                        for="credentials.passcode"
                        id="credentials.passcode-label"
                      >
                        <span>
                          Password
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd emotion-21"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="credentials.passcode-label"
                          autocomplete="current-password"
                          class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-17"
                          data-se="credentials.passcode"
                          id="credentials.passcode"
                          name="credentials.passcode"
                          required=""
                          role="textbox"
                          type="password"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium emotion-23"
                        >
                          <button
                            aria-controls="credentials.passcode"
                            aria-label="Show password"
                            aria-pressed="false"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-24"
                            tabindex="0"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-25"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M3.43 12.813A12.814 12.814 0 0 1 3.069 12a14.153 14.153 0 0 1 1.966-3.38C6.506 6.762 8.746 5 12 5s5.494 1.761 6.966 3.62A14.152 14.152 0 0 1 20.932 12a14.151 14.151 0 0 1-1.966 3.38C17.494 17.238 15.254 19 12 19s-5.494-1.761-6.966-3.62a14.152 14.152 0 0 1-1.603-2.567Zm19.518-1.13L22 12c.949.316.949.317.948.317v.004l-.003.007-.008.024a7.012 7.012 0 0 1-.137.362 16.147 16.147 0 0 1-2.266 3.906C18.84 18.762 16.08 21 12 21c-4.08 0-6.84-2.239-8.534-4.38A16.15 16.15 0 0 1 1.2 12.715a10.039 10.039 0 0 1-.137-.362l-.008-.024-.002-.007-.001-.003c0-.001 0-.002.948-.318a91.698 91.698 0 0 1-.948-.317v-.004l.003-.007.008-.024.029-.08c.025-.067.06-.163.108-.282A16.15 16.15 0 0 1 3.466 7.38C5.16 5.24 7.92 3 12 3c4.08 0 6.84 2.239 8.534 4.38a16.147 16.147 0 0 1 2.266 3.906 10.026 10.026 0 0 1 .137.362l.008.024.002.007.001.003ZM2 12l-.949.316L.946 12l.105-.316L2 12Zm20 0 .949-.316.105.316-.105.316L22 12ZM9 12a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-5a5 5 0 1 0 0 10 5 5 0 0 0 0-10Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <fieldset
                      class="MuiFormControl-root MuiFormControl-marginNormal emotion-27"
                    >
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-28"
                      >
                        
                         
                        
                      </legend>
                      <div
                        aria-labelledby="rememberMe-label"
                        class="MuiFormGroup-root emotion-29"
                        id="rememberMe"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-30"
                          id="rememberMe-checkbox"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall emotion-31"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-32"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-33"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </div>
                    </fieldset>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-35"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign in
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                      data-se="forgot-password"
                      role="link"
                      type="button"
                    >
                      Forgot password?
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-39"
                      data-se="help"
                      href="http://localhost:3000/help/login"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Help
                      <span
                        class="Link-indicator"
                        role="presentation"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-25"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.293 14.293 18.586 4H10V2h10.223c.12 0 .262 0 .387.01.145.012.353.042.571.153a1.5 1.5 0 0 1 .655.656c.112.218.142.426.154.571.01.125.01.268.01.387V14h-2V5.414L9.707 15.707l-1.414-1.414Zm7.745 5.74v-7.847l2-2.042v11.89H2.024V5.966h11.828l-2.041 2H4.024v12.068h12.014Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </a>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-42"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-43"
                  >
                    <div
                      class="MuiBox-root emotion-44"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-33"
                          data-se="signup-info"
                          tabindex="-1"
                        >
                          Don't have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-44"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                        data-se="enroll"
                        role="link"
                        type="button"
                      >
                        Sign up
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`identify-with-password renders the loading state first 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                role="presentation"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <div
                class="MuiBox-root emotion-8"
                role="status"
              >
                <span
                  aria-label="Processing..."
                  class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-9"
                  role="progressbar"
                  style="width: 1.71428571rem; height: 1.71428571rem;"
                >
                  <svg
                    class="MuiCircularProgress-svg emotion-10"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-11"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="17"
                      stroke-width="10"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
